@@ -36,38 +36,47 @@ $_allowed_ = array("threadmain","threadlist","threadview","threadviewpost",
 // menu display
 $_menu_ = array("create account"     => array("link" => "/member/create/",
                                               "title" => "create an account",
+                                              "code" => "",
                                               "show" => REGISTRATION_OPEN,
                                               "auth" => false),
                 "threads"            => array("title" => "back to the home page",
                                               "link" => "/",
+                                              "code" => "",
                                               "show" => true,
                                               "auth" => false),
                 "messages%MESSAGES%" => array("link" => "/message/list/",
                                               "title" => "view your messages",
+                                              "code" => "",
                                               "show" => true,
                                               "auth" => true),
                 "new thread"         => array("link" => "/thread/create/",
                                               "title" => "create a new thread",
+                                              "code" => "",
                                               "show" => true,
                                               "auth" => true),
                 "new message"        => array("link" => "/message/create/",
                                               "title" => "send a message to another member",
+                                              "code" => "",
                                               "show" => true,
                                               "auth" => true),
                 "search"             => array("link" => "/search/",
                                               "title"=> "search the board",
+                                              "code" => "",
                                               "show" => true,
                                               "auth" => true),
                 "chat%CHATTERS%"     => array("link" => "/chat/",
                                               "title" => "chat in realtime",
+                                              "code" => "",
                                               "show" => true,
                                               "auth" => true),
                 "profile"            => array("link" => "/member/view/",
                                               "title" => "view my profile",
+                                              "code" => "",
                                               "show" => true,
                                               "auth" => true),
                 "donate"             => array("link" => "/donate/",
                                               "title" => "donate!",
+                                              "code" => "",
                                               "show" => true,
                                               "auth" => false));
 
