@@ -49,8 +49,6 @@ CREATE INDEX thread_post_indexed_index ON thread_post(indexed);
 CREATE INDEX thread_post_edited_index ON thread_post(edited);
 CREATE INDEX thread_post_deleted_index ON thread_post(deleted);
 
-
-
 ALTER TABLE thread_post ADD FOREIGN KEY (member_id) REFERENCES member(id);
 ALTER TABLE thread_post ADD FOREIGN KEY (thread_id) REFERENCES thread(id);
 
